--- a/main/package.json
+++ b/main/package.json
@@ -26,7 +26,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "secure-ls": "^1.2.6",
     "vue-template-compiler": "^2.6.11",
+    "vuex-persistedstate": "^4.0.0-beta.3",
     "zone.js": "^0.11.3"
   }
 }
